@@ -1,3 +1,6 @@
+28 October 2004 Sylvain Pion
+- Static filters : the epsilons were a bit too pessimistic.
+
 29 September 2004 Sylvain Pion
 - Remove obsolete tst_static_adaptatif.C.
 - Make Static_filter_error::ulp() work with optimization.
